ksl-ndd-analysis-done

--- a/honeyiq_nsl-kdd_EDA.ipynb
+++ b/honeyiq_nsl-kdd_EDA.ipynb
@@ -2,11 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dcb1fb16-36b2-480f-a112-f2c02da49bb4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import warnings\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "\n",
+    "\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "from sklearn.preprocessing import RobustScaler\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from sklearn import metrics"
+   ]
   }
  ],
  "metadata": {
