--- a/honeyiq_unsw-nb15.ipynb
+++ b/honeyiq_unsw-nb15.ipynb
@@ -79,7 +79,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "b5f803ef",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
